tests/examples/good/garbage_collector/good053.lat
int main() {
    int[] arr; 
    int i = 0;
    while (i < 10) {
        i++;
        arr = new int[1000000];
    }
    return 0;
}
