tests/examples/bad/array_new_type_void.lat
int main() {
    int[] arr = new void[10];
    return 1;
}
